# autocommitter

./: README.md
ac/: Cargo.toml
ac/src/: main.rs
tauri-ac/autocommitter/: package-lock.json  package.json  vite.config.js
tauri-ac/autocommitter/src/: App.jsx
tauri-ac/autocommitter/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ac/autocommitter/src-tauri/src/: main.rs
