[package]
name = "ac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.19.0"       
reqwest = { version = "0.12.8", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] } 
